unpackaged/main/default/objects/Opportunity/fields/Is_Alum_Mat__c.field-meta.xml
<CustomField>
    <fullName>Is_Alum_Mat__c</fullName>
    <formula>JobId__r.IsAlum_Mat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Alum Mat</label>
    <type>Checkbox</type>
</CustomField>