unpackaged/main/default/objects/Opportunity/fields/Is_StainlessSteel_Mat__c.field-meta.xml
<CustomField>
    <fullName>Is_StainlessSteel_Mat__c</fullName>
    <formula>JobId__r.IsStainlessSteel_Mat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has StainlessSteel Mat</label>
    <type>Checkbox</type>
</CustomField>