unpackaged/main/default/objects/Opportunity/fields/ITAR__c.field-meta.xml
<CustomField>
    <fullName>ITAR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this Opp/Quote is flagged to be ITAR controlled</inlineHelpText>
    <label>ITAR</label>
    <type>Checkbox</type>
</CustomField>