unpackaged/main/default/objects/Opportunity/fields/Job_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Due_Date__c</fullName>
    <formula>JobId__r.DueDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Due Date</label>
    <type>Date</type>
</CustomField>