unpackaged/main/default/objects/Opportunity/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JobId</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>