unpackaged/main/default/objects/Opportunity/fields/Large_AQ_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Large_AQ_Trigger__c</fullName>
    <formula>if(and(
ispickval(Quote_Type__c,"Auto-Quoted"),
Amount &gt;= 50000,
Amount &lt; 2000000,
not(Account.Generic_Account__c)
),
true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Large AQ Trigger</label>
    <type>Checkbox</type>
</CustomField>