unpackaged/main/default/objects/Opportunity/fields/Large_MQ_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Large_MQ_Trigger__c</fullName>
    <formula>if(and( ERP_Status__c = "Manually-Quoted",  Amount &gt;= 50000),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Large MQ Trigger</label>
    <type>Checkbox</type>
</CustomField>