unpackaged/main/default/objects/Opportunity/fields/Last_Contact_Activity_AM__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Activity_AM__c</fullName>
    <formula>ENCODED:{!ID:00N3u00000PBHqK.ActivityMetric.LastActivityDateTime}</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Last Activity Date AM</label>
    <type>Date</type>
</CustomField>