unpackaged/main/default/objects/Opportunity/fields/Last_Opportunity_Owner_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Opportunity_Owner_Change_Date__c</fullName>
    <inlineHelpText>Date in which the Opportunity Owner was changed last.</inlineHelpText>
    <label>Last Opportunity Owner Change Date</label>
    <type>DateTime</type>
</CustomField>