unpackaged/main/default/objects/Opportunity/fields/Last_Quote_Xometry_Create_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Quote_Xometry_Create_Time__c</fullName>
    <description>Hidden field for Automated Processing to compare last time an Opps quote occured.</description>
    <label>Last Quote Modification Date</label>
    <type>DateTime</type>
</CustomField>