unpackaged/main/default/objects/Opportunity/fields/Last_Quote_Xometry_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_Quote_Xometry_ERP_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>The Last Quote associated to this Opportunity</inlineHelpText>
    <label>Quote ID</label>
    <length>13</length>
    <type>Text</type>
</CustomField>