unpackaged/main/default/objects/Opportunity/fields/LengthofOppName__c.field-meta.xml
<CustomField>
    <fullName>LengthofOppName__c</fullName>
    <description>Returns the Length of the Opp Name.  If close won, it has the order number the length is longer than closed lost opps.</description>
    <formula>LEN(Name)</formula>
    <label>LengthofOppName</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>