unpackaged/main/default/objects/Opportunity/fields/Likelihood_to_Win__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_to_Win__c</fullName>
    <label>Likelihood to Win</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>