unpackaged/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>No Bid</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Lead Time</fullName>
            </value>
            <value>
                <fullName>Service Concerns</fullName>
            </value>
            <value>
                <fullName>Project Canceled</fullName>
            </value>
            <value>
                <fullName>Purchasing from Different Opportunity</fullName>
            </value>
            <value>
                <fullName>On-Demand Competition</fullName>
            </value>
            <value>
                <fullName>Local Competition</fullName>
            </value>
            <value>
                <fullName>Budgetary</fullName>
            </value>
            <value>
                <fullName>Late quote</fullName>
            </value>
            <value>
                <fullName>Customer Made In-House</fullName>
            </value>
            <value>
                <fullName>Ordered Online</fullName>
                <label>Ordered Online - Supply Record Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>