unpackaged/main/default/objects/Opportunity/fields/Loss_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason_Detail__c</fullName>
    <description>Additional Detail for specific Loss Reasons and Sub Loss Reasons</description>
    <inlineHelpText>Some Loss Reasons Require Additional Information</inlineHelpText>
    <label>Loss Reason Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>