unpackaged/main/default/objects/Opportunity/fields/Managed_Services__c.field-meta.xml
<CustomField>
    <fullName>Managed_Services__c</fullName>
    <description>Indicates if Opp is part of the managed services funnel.  Used in tools like Outreach/Traction</description>
    <formula>ISPICKVAL(LeadSource,"Design Guide Download") ||

Owner.UserRole.Name = "Sales Leadership" ||
Owner.UserRole.Name = "Sales Operations" ||
Owner.UserRole.Name = "TSE" ||
Owner.UserRole.Name = "AE-I" ||
Owner.UserRole.Name = "AE-II" ||
Owner.UserRole.Name = "AE-III" ||
Owner.UserRole.Name = "BDR" ||
Owner.UserRole.Name = "CSAM" ||
Owner.UserRole.Name = "EAM" ||
Owner.UserRole.Name = "CSS" ||
Owner.UserRole.Name = "EBDR" ||
Owner.UserRole.Name = "EDM" ||
Owner.UserRole.Name = "EGR" ||
Owner.UserRole.Name = "IMS" ||
Owner.UserRole.Name = "Pool" ||
Owner.UserRole.Name = "SAE" ||
Owner.UserRole.Name = "Sales Administrator" ||
Owner.UserRole.Name = "SAM" ||
Owner.UserRole.Name = "SDR" ||
Owner.UserRole.Name = "VMS"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if Opp is part of the managed services funnel.</inlineHelpText>
    <label>Managed Services</label>
    <type>Checkbox</type>
</CustomField>