unpackaged/main/default/objects/Opportunity/fields/Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approval__c</fullName>
    <formula>Primary_Contact__r.Manager_Approval__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Approval</label>
    <type>Checkbox</type>
</CustomField>