unpackaged/main/default/objects/Opportunity/fields/Manual_Quote_Prioritization_Score__c.field-meta.xml
<CustomField>
    <fullName>Manual_Quote_Prioritization_Score__c</fullName>
    <description>Represents the estimated likelihood that a manual quote will convert.</description>
    <label>MQ Priority</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>