unpackaged/main/default/objects/Opportunity/fields/ManualQuoterEmail__c.field-meta.xml
<CustomField>
    <fullName>ManualQuoterEmail__c</fullName>
    <description>Email address of the first person to move the quote to Manually-Quoted</description>
    <label>Manual Quoter Email</label>
    <type>Email</type>
</CustomField>