unpackaged/main/default/objects/Opportunity/fields/ManualQuoterUser__c.field-meta.xml
<CustomField>
    <fullName>ManualQuoterUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manual Quoter User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>