unpackaged/main/default/objects/Opportunity/fields/ManualQuoteTime__c.field-meta.xml
<CustomField>
    <fullName>ManualQuoteTime__c</fullName>
    <description>Time the Quote was moved to Manually Quoted</description>
    <label>Manual Quote Time</label>
    <type>DateTime</type>
</CustomField>