unpackaged/main/default/objects/Opportunity/fields/ManuProcessusedbySupplies__c.field-meta.xml
<CustomField>
    <fullName>ManuProcessusedbySupplies__c</fullName>
    <description>Manu Process for Supply Opps</description>
    <formula>JobId__r.Processes__c</formula>
    <inlineHelpText>Manu Process on Job.</inlineHelpText>
    <label>Manu.Process(used by Supplies)</label>
    <type>Text</type>
</CustomField>