unpackaged/main/default/objects/Opportunity/fields/Material_Cert__c.field-meta.xml
<CustomField>
    <fullName>Material_Cert__c</fullName>
    <description>Free Text Field that can hold any of the following Certificate values: 1. Domestic Compliant Material Cert
2. DFARS Compliant Material Cert
3. Standard Material Certification</description>
    <inlineHelpText>Indicates that this Opp/Quote is flagged to be Material Certified. Can be DFARS, Domestic, or Standard Material</inlineHelpText>
    <label>Material Cert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>