unpackaged/main/default/objects/Opportunity/fields/Material_Traceability_Cert__c.field-meta.xml
<CustomField>
    <fullName>Material_Traceability_Cert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that represents if a Quote/Order has the cerficate called Material Traceability Certificate</description>
    <label>Material Traceability Cert</label>
    <type>Checkbox</type>
</CustomField>