unpackaged/main/default/objects/Opportunity/fields/MaterialofAcceptedJobAmount__c.field-meta.xml
<CustomField>
    <fullName>MaterialofAcceptedJobAmount__c</fullName>
    <description>Opp Amount / Accepted Job Price</description>
    <formula>Amount /  MKT_AcceptedJobPrice__c</formula>
    <inlineHelpText>Tells how much % material cost to the Accept Job Price.</inlineHelpText>
    <label>Material % of Accepted Job Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>