unpackaged/main/default/objects/Opportunity/fields/MKT_AcceptedJobPrice__c.field-meta.xml
<CustomField>
    <fullName>MKT_AcceptedJobPrice__c</fullName>
    <description>Accepted Price on Job</description>
    <formula>JobId__r.AcceptedPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Accepted Price on Job</inlineHelpText>
    <label>Accepted Job Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>