unpackaged/main/default/objects/Opportunity/fields/MKT_AnticipatedCloseDate__c.field-meta.xml
<CustomField>
    <fullName>MKT_AnticipatedCloseDate__c</fullName>
    <description>Supply MKTP_AnticipatedCloseDate</description>
    <inlineHelpText>Supply Opps Only.</inlineHelpText>
    <label>Supply Opps Anticipated Close Date</label>
    <type>Date</type>
</CustomField>