unpackaged/main/default/objects/Opportunity/fields/MKT_SupplyOpportunityExceptionFlag__c.field-meta.xml
<CustomField>
    <fullName>MKT_SupplyOpportunityExceptionFlag__c</fullName>
    <description>Supply Opps Exception Flag</description>
    <formula>IF(
ispickval( StageName,"New")&amp;&amp;
OR(
WEEKDAY(DATEVALUE(CreatedDate))=6&amp;&amp;
(TODAY()-DATEVALUE(CreatedDate)&gt;3)&amp;&amp;
ISBLANK(Next_Activity_Date_AM__c),
WEEKDAY(DATEVALUE(CreatedDate))&lt;&gt;6&amp;&amp;
(TODAY()-DATEVALUE(CreatedDate)&gt;2)&amp;&amp;
ISBLANK(Next_Activity_Date_AM__c),
DATEVALUE(CreatedDate) &gt; Last_Activity_Date_AM__c
),
True,
IF(
ispickval( StageName,"Qualification")&amp;&amp;
OR(
Days_in_Stage__c &gt; 3,
ISBLANK(Amount),
ISBLANK(Next_Activity_Date_AM__c),
DATEVALUE(CreatedDate) &gt; Last_Activity_Date_AM__c
),
True,
IF(
ispickval( StageName,"Proposal")&amp;&amp;
OR(
Days_in_Stage__c &gt; 3,
ISBLANK(Amount),
ISBLANK(Next_Activity_Date_AM__c),
ISBLANK(Last_Activity_Date_AM__c),
DATEVALUE(CreatedDate) &gt; Last_Activity_Date_AM__c
),
True,
IF(
ispickval( StageName,"Negotiation")&amp;&amp;
OR(
ISBLANK(Amount),
ISBLANK(Next_Activity_Date_AM__c),
ISBLANK(Last_Activity_Date_AM__c),
ISBLANK(MKT_AnticipatedCloseDate__c),
DATEVALUE(CreatedDate) &gt; Last_Activity_Date_AM__c
),
True,
IF(
ispickval( StageName,"Pending Payment")&amp;&amp;
OR(
Days_in_Stage__c &gt; 3,
ISBLANK(Amount),
ISBLANK(Next_Activity_Date_AM__c),
ISBLANK(Last_Activity_Date_AM__c),
ISBLANK(MKT_AnticipatedCloseDate__c),
DATEVALUE(CreatedDate) &gt; Last_Activity_Date_AM__c
),
True,
False)))))</formula>
    <inlineHelpText>Supply Opps Exception Flag</inlineHelpText>
    <label>Supply Opportunity Exception Flag</label>
    <type>Checkbox</type>
</CustomField>