unpackaged/main/default/objects/Opportunity/fields/most_recent_quote_Assembly__c.field-meta.xml
<CustomField>
    <fullName>most_recent_quote_Assembly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>most recent quote Assembly</label>
    <type>Checkbox</type>
</CustomField>