unpackaged/main/default/objects/Opportunity/fields/most_recent_quote_carbon__c.field-meta.xml
<CustomField>
    <fullName>most_recent_quote_carbon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>most_recent_quote_carbon</label>
    <type>Checkbox</type>
</CustomField>