unpackaged/main/default/objects/Opportunity/fields/Most_Recent_Quote_CNC_Machining__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Quote_CNC_Machining__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Most_Recent_Quote_CNC_Machining</label>
    <type>Checkbox</type>
</CustomField>