unpackaged/main/default/objects/Opportunity/fields/Most_Recent_Quote_Die_Casting__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Quote_Die_Casting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Most_Recent_Quote_Die_Casting</label>
    <type>Checkbox</type>
</CustomField>