unpackaged/main/default/objects/Opportunity/fields/Most_Recent_Quote_Injection_Molding__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Quote_Injection_Molding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Most_Recent_Quote_Injection_Molding</label>
    <type>Checkbox</type>
</CustomField>