unpackaged/main/default/objects/Opportunity/fields/Most_Recent_Quote_LSPc__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Quote_LSPc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Most Recent Quote LSPc</label>
    <type>Checkbox</type>
</CustomField>