unpackaged/main/default/objects/Opportunity/fields/most_recent_quote_Other_NotIncluded__c.field-meta.xml
<CustomField>
    <fullName>most_recent_quote_Other_NotIncluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>most recent quote Other (Not Included)</label>
    <type>Checkbox</type>
</CustomField>