unpackaged/main/default/objects/Opportunity/fields/Needs_Quota__c.field-meta.xml
<CustomField>
    <fullName>Needs_Quota__c</fullName>
    <formula>DATEVALUE(CreatedDate) &gt;=  DATE(2021,1,1) &amp;&amp;
(
 ISBLANK(Quota__c) ||
 IF(ISPICKVAL(StageName,"Closed Won"), Commission_Owner_LKP__c, OwnerId) != Quota__r.owner_id__c ||
 CloseDate &lt; Quota__r.startdate__c ||
 CloseDate &gt; Quota__r.enddate__c
)</formula>
    <label>Needs Quota</label>
    <type>Checkbox</type>
</CustomField>