unpackaged/main/default/objects/Opportunity/fields/Negotiation_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Review_Status__c</fullName>
    <label>Negotiation / Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project on Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>