unpackaged/main/default/objects/Opportunity/fields/Opportunity_Owner_Manager_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Manager_Id__c</fullName>
    <formula>Owner.ManagerId</formula>
    <label>Opportunity Owner Manager Id</label>
    <type>Text</type>
</CustomField>