unpackaged/main/default/objects/Opportunity/fields/Ops_Order_Id_based_on_Job__c.field-meta.xml
<CustomField>
    <fullName>Ops_Order_Id_based_on_Job__c</fullName>
    <formula>JobId__r.OrderID__r.XometryOpsOrderID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ops Order Id based on Job (Used by Sup)</label>
    <type>Text</type>
</CustomField>