unpackaged/main/default/objects/Opportunity/fields/Ops_Order_Total__c.field-meta.xml
<CustomField>
    <fullName>Ops_Order_Total__c</fullName>
    <formula>JobId__r.OrderID__r.OrderTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ops Order Total  (used by Supplies)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>