unpackaged/main/default/objects/Opportunity/fields/Order_Bookings_Total__c.field-meta.xml
<CustomField>
    <fullName>Order_Bookings_Total__c</fullName>
    <formula>SubTotal__c -  Order_Discount__c - Order_Redeemed_Points_Value__c +  Order_Shipping__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Bookings Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>