unpackaged/main/default/objects/Opportunity/fields/Order_Certifications__c.field-meta.xml
<CustomField>
    <fullName>Order_Certifications__c</fullName>
    <label>Order Certifications</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>