unpackaged/main/default/objects/Opportunity/fields/Order_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Order_DateTime__c</fullName>
    <label>Order DateTime</label>
    <type>DateTime</type>
</CustomField>