unpackaged/main/default/objects/Opportunity/fields/Order_ERP_Xom_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ERP_Xom_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>The ERP ID for this Order</inlineHelpText>
    <label>Order ID</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>