unpackaged/main/default/objects/Opportunity/fields/Order_Points_Earned__c.field-meta.xml
<CustomField>
    <fullName>Order_Points_Earned__c</fullName>
    <label>Order Points Earned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>