unpackaged/main/default/objects/Opportunity/fields/Order_Redeemed_Points__c.field-meta.xml
<CustomField>
    <fullName>Order_Redeemed_Points__c</fullName>
    <label>Order Redeemed Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>