unpackaged/main/default/objects/Opportunity/fields/Order_Tax__c.field-meta.xml
<CustomField>
    <fullName>Order_Tax__c</fullName>
    <label>Order Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>